Modify for pkoch proposal
