# encryption-service/utils/dto.ts
@@ -1,19 +1,34 @@
 import { z } from "zod";
 
-export const RequestSchema = z.object({
-	wrappedEncryptionKey: z.object({
-		sessionId: z.uuid(), // UUID v4
-		encryptedKey: z.string(), // base64 encoded string
-		nonce: z.string(), // base64 encoded string
+export const CommonRequestSchema = z.object({
+	session: z.object({
+		id: z.uuid(), // UUID v4
+		wrappedEncryptionKey: z.object({
+			nonce: z.string(), // base64 encoded string
+			payload: z.string(), // base64 encoded string of encrypted private key
+		}),
 	}),
-	data: z.string(), // base64 encoded string (encrypted for decryption and vice-versa)
-	publicKey: z.string(), // base64 public key (encryptor for decryption, decryptor for encryption)
+	audience: z.object({
+		root: z.string(), // audience root
+		identifier: z.string(), // audience identifier
+	}),
 });
 
-export type Request = z.infer<typeof RequestSchema>;
+export type CommonRequest = z.infer<typeof CommonRequestSchema>;
+
+export const DataRequestSchema = CommonRequestSchema.extend({
+	arguments: z.object({
+		payload: z.string(), // base64 encoded string (encrypted for decryption and vice-versa)
+		nonce: z.string().optional(), // base64 encoded string (nonce for decryption)
+		publicKey: z.string(), // base64 public key (encryptor for decryption, decryptor for encryption)
+	}),
+});
+
+export type DataRequest = z.infer<typeof DataRequestSchema>;
 
 export const CreateSessionRequestSchema = z.object({
-	publicKey: z.string(), // base64 public key
+	sessionClientPublicKey: z.string(), // base64 public key
+	allowedAudienceRoots: z.array(z.string()), // array of allowed audience roots
 });
 
 export type CreateSessionRequest = z.infer<typeof CreateSessionRequestSchema>;
